MOBACCTMGT-920 resolve issue where warning notification on login has a large top position pushing it down and exposing a large white gap.

--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -8,6 +8,10 @@
   /**
    * Alerts
   **/
+  [notification-bar-class=has-header] {
+    top: 0 !important; // override until we refactor alerts priority
+  }
+
   .alerts-wrapper {
     position: absolute;
     left: 0;
